--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "MNNIT AeroClub Website",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,9 +19,13 @@
   "homepage": "https://github.com/MNNIT-Robotics-Club-Official/AeroClub_Website#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.12"
+    "mongoose": "^5.11.12",
+    "nodemon": "^2.0.7",
+    "uuid": "^3.3.3"
   }
 }
