--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "quill-image-resize": "^3.0.9",
     "ra-data-simple-rest": "^3.10.4",
     "ra-input-rich-text": "^3.10.1",
     "react": "^17.0.1",
