--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-script-tag": "^1.1.2",
     "react-scripts": "4.0.1",
     "react-social-icons": "^4.1.0",
+    "react-toastify": "^7.0.1",
     "react-transition-group": "^4.4.1",
     "typewriter-effect": "^2.17.0",
     "web-vitals": "^0.2.4"
