--- a/server/package.json
+++ b/server/package.json
@@ -21,10 +21,12 @@
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
+    "email-existence": "^0.1.6",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.12",
+    "nodemailer": "^6.4.17",
     "nodemon": "^2.0.7",
     "uuid": "^3.3.3"
   }
