--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
     "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-script-tag": "^1.1.2",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "react-social-icons": "^4.1.0",
     "react-transition-group": "^4.4.1",
     "typewriter-effect": "^2.17.0",
