--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-script-tag": "^1.1.2",
     "react-scripts": "4.0.1",
+    "react-scroll": "^1.8.1",
     "react-social-icons": "^4.1.0",
     "react-toastify": "^7.0.1",
     "react-transition-group": "^4.4.1",
