--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-admin": "^3.11.3",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-map-gl": "^6.1.7",
     "react-particles-js": "^3.4.1",
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
