--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "aeroclub",
   "version": "0.1.0",
   "private": true,
+  "proxy" : "http://localhost:9500",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
@@ -29,7 +30,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=9000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
