--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
+    "googleapis": "^67.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.12",
     "nodemailer": "^6.4.17",
