--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "googleapis": "^67.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.12",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
     "uuid": "^3.3.3"
   }
