--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
@@ -27,7 +28,7 @@
     "react-scroll": "^1.8.1",
     "react-social-icons": "^4.1.0",
     "react-toastify": "^7.0.1",
-    "react-transition-group": "^4.4.1",
+    "react-vertical-timeline-component": "^3.3.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "web-vitals": "^0.2.4"
