--- a/aeroclub/package.json
+++ b/aeroclub/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/helper-define-map": "^7.13.12",
     "@loadable/component": "^5.15.0",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
